--- a/Amptron/Views/Menu/DetailPage.xaml
+++ b/Amptron/Views/Menu/DetailPage.xaml
@@ -50,7 +50,8 @@
                         </Grid>
                         <Label
                             HorizontalOptions="Center"
-                            Style="{StaticResource PoppinsRegularBlack12}"
+                            Style="{StaticResource PoppinsMediumDarkBlack14}"
+                            HorizontalTextAlignment="Center"
                             Text="{i18n:Translate SOHPercentage}" />
                     </StackLayout>
                     <StackLayout
@@ -60,7 +61,8 @@
                         <Image HorizontalOptions="Center" Source="signal_red" />
                         <Label
                             HorizontalOptions="Center"
-                            Style="{StaticResource PoppinsRegularBlack12}"
+                            Style="{StaticResource PoppinsMediumDarkBlack16}"
+                            HorizontalTextAlignment="Center"
                             Text="{i18n:Translate RunningStatus}" />
                     </StackLayout>
                     <StackLayout
@@ -70,7 +72,8 @@
                         <Image HorizontalOptions="Center" Source="signal_red" />
                         <Label
                             HorizontalOptions="Center"
-                            Style="{StaticResource PoppinsRegularBlack12}"
+                            Style="{StaticResource PoppinsMediumDarkBlack16}"
+                            HorizontalTextAlignment="Center"
                             Text="{i18n:Translate TempStatus}" />
                     </StackLayout>
                     <StackLayout
@@ -81,7 +84,8 @@
                         <Image HorizontalOptions="Center" Source="switch_on" />
                         <Label
                             HorizontalOptions="Center"
-                            Style="{StaticResource PoppinsRegularBlack12}"
+                            Style="{StaticResource PoppinsMediumDarkBlack16}"
+                            HorizontalTextAlignment="Center"
                             Text="{i18n:Translate ChargeSwitch}" />
                     </StackLayout>
                     <StackLayout
@@ -92,93 +96,57 @@
                         <Image HorizontalOptions="Center" Source="switch_off" />
                         <Label
                             HorizontalOptions="Center"
-                            Style="{StaticResource PoppinsRegularBlack12}"
+                            Style="{StaticResource PoppinsMediumDarkBlack16}"
+                            HorizontalTextAlignment="Center"
                             Text="{i18n:Translate DischargeSwitch}" />
                     </StackLayout>
                 </Grid>
-                <Grid
-                    Margin="0,10"
-                    ColumnDefinitions="0.33*,0.33*,0.33*"
-                    HeightRequest="180"
-                    HorizontalOptions="Fill"
-                    RowDefinitions="*, Auto"
-                    RowSpacing="0"
-                    VerticalOptions="Start">
-                    <Image
-                        Grid.Column="0"
-                        HorizontalOptions="Center"
-                        Source="soc"
-                        Scale="0.8"
-                        VerticalOptions="Start" />
-                    <Image
-                        Grid.Column="1"
-                        HorizontalOptions="Center"
-                        Source="soc"
-                        Scale="0.8"
-                        VerticalOptions="Start" />
-                    <Image
-                        Grid.Column="2"
-                        HorizontalOptions="Center"
-                        Source="soc"
-                        Scale="0.8"
-                        VerticalOptions="Start" />
-
-                    <Label
-                        Grid.Row="1"
-                        HorizontalOptions="Center"
-                        Style="{StaticResource PoppinsRegularBlack12}"
-                        VerticalOptions="Center">
-                        <Label.FormattedText>
-                            <FormattedString>
-                                <Span Text="{i18n:Translate Current}" />
-                                <Span Text=" : " />
-                                <Span Text="{Binding Current, StringFormat='{0} A'}" />
-                            </FormattedString>
-                        </Label.FormattedText>
-                    </Label>
-                    <Label
-                        Grid.Row="1"
-                        Grid.Column="1"
-                        HorizontalOptions="Center"
-                        Style="{StaticResource PoppinsRegularBlack12}"
-                        VerticalOptions="Center">
-                        <Label.FormattedText>
-                            <FormattedString>
-                                <Span Text="{i18n:Translate CellTemp}" />
-                                <Span Text=" : " />
-                                <Span Text="{Binding CellTemp, StringFormat='{0}˚ C'}" />
-                            </FormattedString>
-                        </Label.FormattedText>
-                    </Label>
-                    <Label
-                        Grid.Row="1"
-                        Grid.Column="2"
-                        HorizontalOptions="Center"
-                        Style="{StaticResource PoppinsRegularBlack12}"
-                        VerticalOptions="Center">
-                        <Label.FormattedText>
-                            <FormattedString>
-                                <Span Text="{i18n:Translate BMSTemp}" />
-                                <Span Text=" : " />
-                                <Span Text="{Binding BMSTemp, StringFormat='{0}˚ C'}" />
-                            </FormattedString>
-                        </Label.FormattedText>
-                    </Label>
-                </Grid>
-                <Frame Margin="0,0,0,5" Padding="0,13">
+                <Frame Margin="0,0,0,5" Padding="0,13" BorderColor="Transparent">
                     <Frame.Shadow>
                         <Shadow Radius="3" />
                     </Frame.Shadow>
                     <Label
                         HorizontalOptions="Center"
-                        Text="{Binding BatteryVoltage, StringFormat='Battery Voltage : {0:#.##} V'}"
+                        Style="{StaticResource PoppinsSemiBoldDarkBlack14}"
+                        Text="{i18n:Translate Voltage}"
                         VerticalOptions="Center" />
                 </Frame>
+                <Grid ColumnDefinitions="0.25*,0.25*,0.25*,0.25*">
+                    <Border StrokeShape="RoundRectangle 10" HeightRequest="100" Padding="5,10">
+                        <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand">
+                            <Label Text="{i18n:Translate BatteryVoltage}" HorizontalOptions="Center" HorizontalTextAlignment="Center" Style="{StaticResource PoppinsBoldDimGray12}"/>
+                            <Label Text="{Binding BatteryVoltage, StringFormat='{0} V'}" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" Style="{StaticResource PoppinsRegularBlack14}"/>
+                            <BoxView HeightRequest="3" HorizontalOptions="Center" VerticalOptions="End" WidthRequest="15" Color="YellowGreen" />
+                        </StackLayout>
+                    </Border>
+                    <Border StrokeShape="RoundRectangle 10" HeightRequest="100" Grid.Column="1" Padding="5,10">
+                        <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand">
+                            <Label Text="{i18n:Translate VoltageDifference}" HorizontalOptions="Center" HorizontalTextAlignment="Center" Style="{StaticResource PoppinsBoldDimGray12}"/>
+                            <Label Text="{Binding VoltageDifference, StringFormat='{0} V'}" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" Style="{StaticResource PoppinsRegularBlack14}"/>
+                            <BoxView HeightRequest="3" VerticalOptions="End" HorizontalOptions="Center" WidthRequest="15" Color="YellowGreen" />
+                        </StackLayout>
+                    </Border>
+                    <Border StrokeShape="RoundRectangle 10" HeightRequest="100" Grid.Column="2" Padding="5,10">
+                        <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand">
+                            <Label Text="{i18n:Translate MinimumVoltage}" HorizontalOptions="Center" HorizontalTextAlignment="Center" Style="{StaticResource PoppinsBoldDimGray12}"/>
+                            <Label Text="{Binding MinimumVoltage, StringFormat='{0} V'}" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" Style="{StaticResource PoppinsRegularBlack14}"/>
+                            <BoxView HeightRequest="3" VerticalOptions="End" HorizontalOptions="Fill" WidthRequest="15" Color="YellowGreen" />
+                        </StackLayout>
+                    </Border>
+                    <Border StrokeShape="RoundRectangle 10" HeightRequest="100" Grid.Column="3" Padding="5,10">
+                        <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand">
+                            <Label Text="{i18n:Translate MaximumVoltage}" VerticalOptions="Start" HorizontalOptions="Center" HorizontalTextAlignment="Center" Style="{StaticResource PoppinsBoldDimGray12}"/>
+                            <Label Text="{Binding MaximumVoltage, StringFormat='{0} V'}" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" Style="{StaticResource PoppinsRegularBlack14}"/>
+                            <BoxView HeightRequest="3" VerticalOptions="End" HorizontalOptions="Fill" WidthRequest="15" Color="YellowGreen" />
+                        </StackLayout>
+                    </Border>
+                </Grid>
+
                 <Grid
-                    Margin="0,0,0,20"
+                    Margin="0,20,0,20"
                     ColumnDefinitions="20,*,20"
                     ColumnSpacing="15">
-                    <Image Source="chevron_left" />
+                    <Image Source="chevron_left.png" />
                     <StackLayout
                         Grid.Column="1"
                         BindableLayout.ItemsSource="{Binding Balancings}"
@@ -198,13 +166,13 @@
                                         Padding="0,4,0,0"
                                         Orientation="Horizontal"
                                         VerticalOptions="CenterAndExpand">
-                                        <Label
+                                        <Label  
                                             Style="{StaticResource PoppinsRegularBlack15}"
                                             VerticalOptions="Center"
                                             VerticalTextAlignment="Center">
                                             <Label.FormattedText>
                                                 <FormattedString>
-                                                    <Span Text="{Binding Id, StringFormat='Cell {0} : '}" />
+                                                   <Span Text="{Binding Id, StringFormat='Cell {0} : '}" />
                                                     <Span Text="{Binding Voltage, StringFormat='{0:#.##} V'}" />
                                                 </FormattedString>
                                             </Label.FormattedText>
@@ -219,7 +187,7 @@
                             </DataTemplate>
                         </BindableLayout.ItemTemplate>
                     </StackLayout>
-                    <Image Grid.Column="2" Source="chevron_right" />
+                    <Image Grid.Column="2" Source="chevron_right.png" />
                 </Grid>
             </StackLayout>
         </ScrollView>
